--- a/py.html
+++ b/py.html
@@ -12,6 +12,11 @@
             <div id="logo">
                 <img src="python.png" alt="py">
             </div>
+            <div id="bar">
+                <ul>
+                    <li>About</li><li>Downloads</li><li>Documentation</li><li>Community</li><li>News</li><li>Events</li>
+                </ul>
+            </div>
 
 
 
